--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   --color-white: #ffffff;
   --color-light-white: #eeeeee;
   --color-dark-white: #bdbdbd;
-  --color-navy: #283aa1;
+  --color-navy: #145cb5;
   --color-dark-navy: #283aa1;
   --color-dark-grey: #4d4d4d;
   --color-grey: #616161;
@@ -26,11 +26,30 @@
   --weight-bold: 700;
   --weight-semi-bold: 600;
   --weight-regular: 400;
+
+  /* Size */
+  --size-border-radius: 4px;
 }
 
 /* Universal tags */
 * {
     box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
+    cursor: default;
+}
+
+a {
+    text-decoration: none;
+    color: var(--color-white);
+}
+
+ul{
+    list-style: none;
+    padding-left: 0;
 }
 
 /* Typography */
@@ -61,4 +80,38 @@ p{
     color: var(--color-black);
     margin: 4px 0;
 
+}
+
+/* NavBar */
+#navbar {
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--color-navy);
+    align-items: center;
+    color: var(--color-white);
+    padding: 16px;
+}
+
+.navbar__menu {
+    display: flex;
+}
+
+.navbar__logo {
+    font-size: var(--font-medium);
+    font-weight: var(--weight-semi-bold);
+}
+
+.navbar__menu__item{
+    padding: 8px 12px;
+    margin: 0 4px;
+    cursor: pointer;
+    border-radius: var(--size-border-radius);
+}
+
+.navbar__menu__item.active {
+    border: 1px solid var(--color-white);
+}
+
+.navbar__menu__item:hover {
+    background-color: var(--color-dark-navy);
 }
