--- a/style.css
+++ b/style.css
@@ -97,12 +97,20 @@ p{
 
 /* NavBar */
 #navbar {
+    width: 100%;
+    position: fixed;
     display: flex;
     justify-content: space-between;
-    background-color: var(--color-navy);
+    background-color: transparent;
     align-items: center;
     color: var(--color-white);
     padding: 16px;
+    transition: all 300ms ease-in-out;
+}
+
+#navbar.navbar--dark {
+    background-color: var(--color-navy);
+    padding: 8px;
 }
 
 .navbar__menu {
@@ -129,7 +137,7 @@ p{
     background-color: var(--color-dark-navy);
 }
 
-.navbar__toggle_btn {
+.navbar__toggle-btn {
     position: absolute;
     top: 24px;
     right: 32px;
@@ -142,6 +150,7 @@ p{
 #home{
     background: url("./imgs/home-background.png") center/cover no-repeat;
     padding: 40px;
+    padding-top: 120px;
     text-align: center;
 }
 
