--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ p{
     color: var(--color-white);
     padding: 16px;
     transition: all 300ms ease-in-out;
+    z-index: 1;
 }
 
 #navbar.navbar--dark {
