--- a/style.css
+++ b/style.css
@@ -127,15 +127,14 @@ p{
     padding: 8px 12px;
     margin: 0 4px;
     cursor: pointer;
+    border: 1px solid transparent;
     border-radius: var(--size-border-radius);
 }
 
-.navbar__menu__item.active {
-    border: 1px solid var(--color-white);
-}
 
 .navbar__menu__item:hover {
     background-color: var(--color-dark-navy);
+    border-color: var(--color-white);
 }
 
 .navbar__toggle-btn {
@@ -322,13 +321,13 @@ p{
     padding: 8px 48px;
 }
 
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover {
     background-color: var(--color-dark-navy);
     color:var(--color-white);
 }
 
-.category__btn.active .category__count,
+.category__btn.selected .category__count,
 .category__btn:hover .category__count {
     opacity: 1;
     top: 0;
@@ -354,7 +353,7 @@ p{
     flex-wrap: wrap;
     justify-content: center;
     opacity: 1;
-    transition: all 300ms ease-in;
+    transition: all 300ms ease-out;
 }
 
 .work__projects.anim-out {
