--- a/style.css
+++ b/style.css
@@ -176,6 +176,10 @@ p{
     border-radius: var(--size-border-radius);
 }
 
+.home__contact:hover {
+    background-color: var(--color-dark-navy);
+}
+
 /* Section common */
 .section{
     text-align: center;
@@ -319,6 +323,7 @@ p{
     border-radius: var(--size-border-radius);
     font-size: var(--font-regular);
     padding: 8px 48px;
+    position: relative;
 }
 
 .category__btn.selected,
@@ -341,9 +346,9 @@ p{
     height: 24px;
     display: inline-block;
     line-height:24px;
-    position: relative;
+    position: absolute;
     top: -20px;
-    left: 4px;
+    right: 16px;
     opacity: 0;
     transition: all var(--animation-duration) ease-in
 }
@@ -390,7 +395,7 @@ p{
     width: 100%;
     height: 100%;
     top: 0;
-    left: 0;
+    left: 0; 
     opacity: 0;
     transform: translateY(10px);
     transition: all var(--animation-duration) ease-in;
@@ -469,8 +474,20 @@ p{
 
 /* For below 768px screen width */
 @media screen and (max-width: 768px){
+    :root {
+        /* Font size */
+        --font-large: 30px;
+        --font-medium: 18px;
+        --font-regular: 16px;
+        --font-small: 14px;
+        --font-micro: 12px;
+    }
+
     .navbar__toggle-btn {
         display:block;
+        top:16px;
+        right: 16px;
+        font-size: var(--font-medium);
     }
 
     #navbar {
@@ -494,16 +511,27 @@ p{
         display: block;
     }
 
+    .section{
+        padding: 16px;
+        padding-top: 40px;
+    }
+
     .about__majors {
         flex-direction: column;
+        margin-top: 30px;
+        margin-bottom: 0px;
     }
 
     .major {
-        margin-bottom: 38px;
+        margin-bottom: 30px;
     }
 
     .skillset {
         flex-direction: column;
+    }
+
+    .category__btn {
+        margin: 4px 0;
     }
 
     .project {
@@ -512,5 +540,13 @@ p{
 
     .job {
         margin-left: 0px;
+    }
+
+    .arrow-up{
+        width: 50px;
+        height: 50px;
+        font-size: 30px;
+        bottom: 16px;
+        right: 16px;
     }
 }
